<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackheroes.lev.achiever.activites.addNewGoalDial"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintVertical_bias="0.074"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionAboutWhat"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answerWhatToDo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:inputType="textMultiLine"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionAboutWhy"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/answerWhyDoThat"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:inputType="textMultiLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionAboutWhen"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"  />

        <Button
            android:id="@+id/answerSetDate"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setDateString"
            />

        <TextView
            android:id="@+id/actualDateTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"

            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionAboutTodos"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:text="@string/addTodoButtonString"
            android:id="@+id/addTodoButton"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionAdditionalNotes"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/additionalNotes"
            android:backgroundTint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/addNewGoalButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#19c150"
            android:text="@string/addNewGoalString"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
