<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.hackheroes.lev.achiever.activites.mainMenuActivity"
    android:background="@color/colorBackground"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logoachiever" />

            <TextView
                android:id="@+id/textView6"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#7349b5"
                android:text="ACHIEVER" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/goPersonal"
                android:drawableStart="@drawable/user"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/personalStr"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="@string/personalStr" />

            <Button
                android:id="@+id/goCommunity"
                android:drawableStart="@drawable/small_m_users"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/communityStr"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                tools:text="@string/communityStr" />

            <Button
                android:id="@+id/button"
                android:drawableStart="@drawable/parents"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:drawableTint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/parentStr"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                tools:text="@string/parentStr" />

            <Button
                android:id="@+id/StatsButton"
                android:drawableStart="@drawable/stats"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:drawableTint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/statsStr"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="@string/statsStr" />

            <ImageButton
                android:id="@+id/SettingsButton"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:layout_height="108dp"
                android:adjustViewBounds="true"
                android:src="@drawable/setting"
                android:cropToPadding="false" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>